--- a/app/src/main/res/layout/activity_main_row.xml
+++ b/app/src/main/res/layout/activity_main_row.xml
@@ -13,24 +13,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/imageView"
+            android:padding="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_marginTop="16dp"
             android:layout_marginRight="16dp" />
 
         <TextView
             android:id="@+id/title"
+            android:paddingTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/imageView"
+
             android:text="Title"
-            android:textSize="30sp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/description"
@@ -38,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/title"
             android:layout_toRightOf="@+id/imageView"
+            android:layout_alignParentRight="true"
             android:text="Description" />
 
     </RelativeLayout>
