--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -7,5 +7,6 @@
         android:icon="@drawable/ic_action_favorite_empty"
         android:orderInCategory="100"
         android:title="@string/action_favorite"
+        android:onClick="favoriteClicked"
         app:showAsAction="ifRoom" />
 </menu>
